
syntax = "proto3";
package auctionBidder;

option go_package = "github.com/ViktorEmil2000/DSystem-CatanEnjoyers-Handin5/auctionBidder";

// Communication between (main) Auction and Bidder
service Communication {
  // Auction receives bid and returns relevant information
  rpc bid (FromBidder) returns (FromAuction) {}

  //Server sends result to all bidders
  rpc result (Empty) returns (Result) {}

}

message Empty{
  
}

// Bidder information for the Auction
message FromBidder {
  int64 amount = 1;
  int64 ID = 2;
  int64 timestamp = 3;
}

// Auction responds
message FromAuction {
  bool acknowledgment = 1;
  string comment = 2;
}

message Result{
  bool AuctionActive = 1;
  string comment = 2;
  int64 ID = 3;

}
